<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/surfaceColor"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/welcome_back"
        android:textAppearance="?attr/textAppearanceTitleLarge"/>

    <blackorbs.dev.blackshop.ui.components.TextInputField
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintText="@string/email"
        app:inputType="textEmailAddress"/>

    <blackorbs.dev.blackshop.ui.components.TextInputField
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintText="@string/password"
        app:inputType="textPassword"/>

    <blackorbs.dev.blackshop.ui.components.PrimaryButton
        android:id="@+id/action_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/login"
        android:layout_marginTop="@dimen/standard_10"
        android:layout_marginBottom="@dimen/standard_20"/>

    <TextView
        android:id="@+id/gotoSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/goto_sign_up"
        android:textColor="@color/textSecondary"
        android:textSize="14sp" />
</LinearLayout>
