<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/standard_16"
    app:cardBackgroundColor="@color/surfaceColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28.dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_done_all_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:layout_margin="@dimen/standard_10"
            android:textAppearance="?attr/textAppearanceTitleMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_message"
            android:layout_margin="@dimen/standard_10"
            android:textAppearance="?attr/textAppearanceBodyMedium"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/okay_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/button_okay"
            android:textSize="16sp"
            android:textColor="?colorSecondaryVariant"
            android:layout_marginTop="@dimen/standard_20"
            app:strokeWidth="2dp"
            app:strokeColor="?colorSecondaryVariant"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>