<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/standard_10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar_container"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_container"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="GridLayoutManager"
        app:spanCount="2"
        android:paddingVertical="@dimen/standard_3"
        tools:listitem="@layout/product_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/error_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/standard_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_try_again"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyMedium"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_10"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>