<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="@dimen/standard_3"
    android:layout_marginVertical="@dimen/standard_5"
    android:paddingStart="@dimen/standard_16"
    android:paddingEnd="@dimen/standard_5"
    android:paddingVertical="@dimen/standard_16"
    android:background="@color/surfaceColor">
    <ImageView
        android:id="@+id/image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerInside"
        tools:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_image" />
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/textPrimary"
        android:maxLines="2"
        android:layout_marginHorizontal="@dimen/standard_10"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintEnd_toStartOf="@+id/loader"
        app:layout_constraintHorizontal_bias="0" />
    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_10"
        android:text="@string/x1"
        android:textColor="@color/textSecondary"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$49.99"
        android:textColor="@color/primaryColor"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:layout_marginEnd="@dimen/standard_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="@dimen/standard_20"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_round_close_24"
        app:tint="@color/textSecondary"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="@dimen/standard_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
