<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_items_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:paddingBottom="96dp"
        android:layout_below="@+id/toolbar_container"
        tools:listitem="@layout/cart_item"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/empty_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_cart_items"
            android:src="@drawable/ic_round_remove_shopping_cart_24"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_16"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_cart_items"
            android:textAppearance="?attr/textAppearanceBodyMedium"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_3"
        app:dividerColor="@color/textSecondary"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_above="@+id/bottom_container"/>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surfaceColor"
        android:paddingHorizontal="@dimen/standard_20"
        android:paddingVertical="@dimen/standard_10"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textStyle="bold"
            android:text="@string/total"
            android:layout_marginBottom="@dimen/standard_10"
            android:layout_alignParentStart="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textStyle="bold"
            tools:text="$19023.46"
            android:textColor="@color/primaryColor"
            android:layout_marginBottom="@dimen/standard_10"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

        <blackorbs.dev.blackshop.ui.components.PrimaryButton
            android:id="@+id/action_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/checkout"
            android:layout_below="@+id/total_price"/>
    </RelativeLayout>

</RelativeLayout>